# BoopSuite

./: .gitignore  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  start.sh
boop/: __init__.py  __main__.py  all.py  constants.py  d11_frame.py  helpers.py  hopper.py  oui.py  sniffer.py
boop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
boop/helpers/: access_points.py
boop/lib/: __init__.py  channels.py  client.py  d11_frame.py  network.py  sniffer.py  types.py
boop/tools/: interfaces.py  modes.py  sniffer.py
tests/: test_boop.py
