[tool.poetry]
name = "boop"
version = "0.1.0"
description = "Wireless Sniffer"
authors = ["jacobsin <jayrad.security@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

scapy = "^2.4"
netaddr = "^0.7"
pyric = { git = "https://github.com/wraith-wireless/PyRIC.git", branch = "master"}

loguru = "^0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
