[tool.poetry]
name = "boop"
version = "0.1.0"
description = ""
authors = ["jacobsin <jayrad.security@protonmail.com>"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.7"
scapy = { version = "*", allows-prereleases = true }
pyric = "^0.1.6"
click = "^7.0"
netaddr = "^0.7.19"
requests = "^2.21"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4.0"
pytest-cov = "^2.6.1"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.27.0"

codecov = "^2.0.15"

# formatting
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
